new configuration file format

--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -5,7 +5,7 @@
 desc SocLib platform support
 default	undefined
 provide	CONFIG_ARCH_NAME=soclib
-provide CONFIG_MODULES=+arch:%CONFIGPATH
+provide CONFIG_MODULES=+arch:$(CONFIGPATH)
 %config end
 
 %config CONFIG_SOCLIB_EARLY_CONSOLE
