--- a/cpu/mips/mips.config
+++ b/cpu/mips/mips.config
@@ -10,7 +10,7 @@ single CONFIG_CPU_MIPS_ABI_O32 CONFIG_CPU_MIPS_ABI_O64 CONFIG_CPU_MIPS_ABI_N32 C
 require CONFIG_CPU_MIPS_VERSION
 provide CONFIG_CPU_CACHE
 provide CONFIG_CPU_NAME=mips
-provide CONFIG_MODULES=+cpu:%CONFIGPATH
+provide CONFIG_MODULES=+cpu:$(CONFIGPATH)
 provide CONFIG_CPU_RESET_ADDR=0xbfc00000
 provide CONFIG_CPU_RESET_SIZE=0x2000
 provide CONFIG_COMPILE_SIZEOF_INT=4
