--- a/cpu/ppc/ppc.config
+++ b/cpu/ppc/ppc.config
@@ -7,7 +7,7 @@ default undefined
 require	CONFIG_ARCH_SOCLIB
 provide CONFIG_CPU_CACHE
 provide CONFIG_CPU_NAME=ppc
-provide CONFIG_MODULES=+cpu:%CONFIGPATH
+provide CONFIG_MODULES=+cpu:$(CONFIGPATH)
 provide CONFIG_CPU_RESET_ADDR=0xffffff80
 provide CONFIG_CPU_RESET_SIZE=0x80
 provide CONFIG_CPU_ENDIAN_BIG
