--- a/libdsrl/dsrl.config
+++ b/libdsrl/dsrl.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_LIBDSRL
 	desc "Lua API for dynamic SRL"
-	provide CONFIG_MODULES=+libdsrl:%CONFIGPATH
+	provide CONFIG_MODULES=+libdsrl:$(CONFIGPATH)
 	depend CONFIG_MUTEK_SCHEDULER
 	require CONFIG_MUTEK_SCHEDULER_MIGRATION=undefined
 	depend CONFIG_ARCH_SOCLIB
