--- a/libelf/libelf.config
+++ b/libelf/libelf.config
@@ -3,7 +3,7 @@
 
 %config CONFIG_LIBELF
 desc "Enable ability to load (static) elf executables"
-provide CONFIG_MODULES=+librtld:%CONFIGPATH
+provide CONFIG_MODULES=+librtld:$(CONFIGPATH)
 provide CONFIG_LICENSE_USE_GPL
 depend CONFIG_VFS
 %config end
