--- a/libfdt/fdt.config
+++ b/libfdt/fdt.config
@@ -3,5 +3,5 @@
 desc Provide support for Flattened-device-trees, blobs representing the
 desc architecture memory map and devices.
 default undefined
-provide CONFIG_MODULES=+libfdt:%CONFIGPATH
+provide CONFIG_MODULES=+libfdt:$(CONFIGPATH)
 %config end
