--- a/libmwmr/mwmr.config
+++ b/libmwmr/mwmr.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_MWMR
 desc Mwmr middleware support
-provide CONFIG_MODULES=+libmwmr:%CONFIGPATH
+provide CONFIG_MODULES=+libmwmr:$(CONFIGPATH)
 require CONFIG_MWMR_SOCLIB CONFIG_MWMR_PTHREAD
 single CONFIG_MWMR_SOCLIB CONFIG_MWMR_PTHREAD
 %config end
