--- a/libpthread/pthread.config
+++ b/libpthread/pthread.config
@@ -6,7 +6,7 @@ desc Enable POSIX thread support
 require CONFIG_PTHREAD_STACK_SIZE
 depend CONFIG_MUTEK_SCHEDULER
 depend CONFIG_MUTEK_RWLOCK
-provide CONFIG_MODULES=+libpthread:%CONFIGPATH
+provide CONFIG_MODULES=+libpthread:$(CONFIGPATH)
 %config end
 
 %config CONFIG_PTHREAD_STACK_SIZE
