--- a/libsrl/srl.config
+++ b/libsrl/srl.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_SRL
 desc MutekS API
-provide CONFIG_MODULES=+libsrl:%CONFIGPATH
+provide CONFIG_MODULES=+libsrl:$(CONFIGPATH)
 depend CONFIG_MUTEK_SCHEDULER
 depend CONFIG_MWMR
 require CONFIG_SRL_SOCLIB CONFIG_SRL_STD
