--- a/libtermui/termui.config
+++ b/libtermui/termui.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_LIBTERMUI
 desc Enable libtermui
-provide CONFIG_MODULES=+libtermui:%CONFIGPATH
+provide CONFIG_MODULES=+libtermui:$(CONFIGPATH)
 provide CONFIG_LICENSE_USE_GPL
 default undefined
 %config end
