--- a/libvfs/vfs.config
+++ b/libvfs/vfs.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_VFS
 desc Enables VFS support
-provide CONFIG_MODULES=+libvfs:%CONFIGPATH
+provide CONFIG_MODULES=+libvfs:$(CONFIGPATH)
 %config end
 
 %config CONFIG_VFS_DEBUG
