--- a/arch/ibmpc/ibmpc.config
+++ b/arch/ibmpc/ibmpc.config
@@ -5,7 +5,7 @@
 desc IBM PC platform support
 default	undefined
 provide	CONFIG_ARCH_NAME=ibmpc
-provide CONFIG_MODULES=+arch:%CONFIGPATH
+provide CONFIG_MODULES=+arch:$(CONFIGPATH)
 provide CONFIG_ROM_ADDR=0x00100000
 provide CONFIG_ROM_SIZE=0x00200000
 provide CONFIG_RAM_ADDR=0x00300000
