--- a/arch/simple/simple.config
+++ b/arch/simple/simple.config
@@ -5,7 +5,7 @@
 desc Simple platform support
 default	undefined
 provide	CONFIG_ARCH_NAME=simple
-provide CONFIG_MODULES=+arch:%CONFIGPATH
+provide CONFIG_MODULES=+arch:$(CONFIGPATH)
 require CONFIG_ARCH_SIMPLE_RESET_ADDR
 exclude CONFIG_SMP CONFIG_CLUSTER
 provide CONFIG_DATA_FROM_ROM
