--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -6,7 +6,7 @@ desc ARM processors support
 default undefined
 require CONFIG_CPU_ARM_FPU
 provide CONFIG_CPU_NAME=arm
-provide CONFIG_MODULES=+cpu:%CONFIGPATH
+provide CONFIG_MODULES=+cpu:$(CONFIGPATH)
 provide CONFIG_CPU_ENDIAN_LITTLE
 provide CONFIG_COMPILE_SIZEOF_INT=4
 provide CONFIG_CPU_RESET_ADDR=0x00000000
