--- a/cpu/avr/avr.config
+++ b/cpu/avr/avr.config
@@ -5,7 +5,7 @@
 desc AVR microcontroller support
 default undefined
 provide CONFIG_CPU_NAME=avr
-provide CONFIG_MODULES=+cpu:%CONFIGPATH
+provide CONFIG_MODULES=+cpu:$(CONFIGPATH)
 provide CONFIG_CPU_RESET_ADDR=0x00000000
 provide CONFIG_COMPILE_SIZEOF_INT=2
 require CONFIG_CPU_AVR_IRQ_COUNT
