--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -7,7 +7,7 @@ default undefined
 require	CONFIG_ARCH_IBMPC
 provide CONFIG_CPU_CACHE
 provide CONFIG_CPU_NAME=x86
-provide CONFIG_MODULES=+cpu:%CONFIGPATH
+provide CONFIG_MODULES=+cpu:$(CONFIGPATH)
 provide CONFIG_CPU_CACHE CONFIG_CPU_CACHE_COHERENCY
 provide CONFIG_LIBC_STRING_ASM
 provide CONFIG_CPU_RESET_ADDR=0x000ffff0
