--- a/liblua/liblua.config
+++ b/liblua/liblua.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_LIBLUA
 desc Enable lua scripting language support
-provide CONFIG_MODULES=+liblua:%CONFIGPATH
+provide CONFIG_MODULES=+liblua:$(CONFIGPATH)
 provide CONFIG_LICENSE_USE_MIT
 %config end
 
