--- a/libnetwork/network.config
+++ b/libnetwork/network.config
@@ -4,7 +4,7 @@ desc Enable network support
 depend CONFIG_MUTEK_TIMERMS
 depend CONFIG_LIBC_SEMAPHORE
 depend CONFIG_PTHREAD
-provide CONFIG_MODULES=+libnetwork:%CONFIGPATH
+provide CONFIG_MODULES=+libnetwork:$(CONFIGPATH)
 %config end
 
 %config CONFIG_NETWORK_AUTOALIGN
