--- a/libunix/unix.config
+++ b/libunix/unix.config
@@ -6,7 +6,7 @@ depend CONFIG_MUTEK_SCHEDULER
 depend CONFIG_HEXO_MMU
 require CONFIG_UNIX_STACK_VADDR
 require CONFIG_UNIX_START_VADDR
-provide CONFIG_MODULES=+libunix:%CONFIGPATH
+provide CONFIG_MODULES=+libunix:$(CONFIGPATH)
 %config end
 
 %config CONFIG_UNIX_STACK_VADDR
