--- a/drivers/fs/Makefile
+++ b/drivers/fs/Makefile
@@ -5,3 +5,7 @@ endif
 ifeq ($(CONFIG_DRIVER_FS_FAT), defined)
  subdirs += fat
 endif
+
+ifeq ($(CONFIG_DRIVER_FS_ISO9660), defined)
+ subdirs += iso9660
+endif
