lot of vfs/microshell related small fixes

--- a/examples/lua_microshell/Makefile
+++ b/examples/lua_microshell/Makefile
@@ -4,7 +4,11 @@ objs = getline_lua.o shell_functions.o
 ifeq ($(CONFIG_ARCH_SOCLIB),defined)
 
 ifeq ($(CONFIG_CPU_MIPS),defined)
-objs += platform-mips.o
+ ifeq ($(CONFIG_CPU_CACHE_COHERENCY),defined)
+  objs += platform-mipsel-coherent.o
+ else
+  objs += platform-mips.o
+ endif
 endif
 
 ifeq ($(CONFIG_CPU_PPC),defined)
