--- a/libelf/libelf.config
+++ b/libelf/libelf.config
@@ -42,7 +42,8 @@ default defined
 %config CONFIG_LIBELF_RTLD_KERNEL
 desc "Allows to load kernel modules (not implemented yet)"
 parent CONFIG_LIBELF_RTLD
-exclude CONFIG_LIBELF_RTLD_TLS # TLS is non-sense for kernel module
+# TLS is non-sense for kernel module
+exclude CONFIG_LIBELF_RTLD_TLS
 default undefined
 %config end
 
