--- a/libvfs/vfs.config
+++ b/libvfs/vfs.config
@@ -12,3 +12,8 @@ parent CONFIG_VFS
 default 32
 desc Maximum file name length supported
 %config end
+
+%config CONFIG_VFS_VERBOSE
+parent CONFIG_VFS
+desc Print some vfs debugging informations
+%config end
