--- a/examples/lua_microshell/config
+++ b/examples/lua_microshell/config
@@ -5,6 +5,7 @@
   # Mutek features
   CONFIG_MUTEK_CONSOLE
   CONFIG_MUTEK_MEMALLOC_SMART
+  CONFIG_SOCLIB_MEMCHECK
   
   # Scheduler
   CONFIG_PTHREAD
