block-file-emu updated

--- a/drivers/device/block/file-emu/block-file-emu.config
+++ b/drivers/device/block/file-emu/block-file-emu.config
@@ -2,6 +2,7 @@
 %config CONFIG_DRIVER_BLOCK_EMU
 desc enable emu block device support
 require CONFIG_DRIVER_BLOCK_EMU_BLOCKSIZE
+provide CONFIG_DRIVER_BLOCK
 %config end
 
 %config CONFIG_DRIVER_BLOCK_EMU_BLOCKSIZE
