iso9660 fs working fine, added RockRidge long filename extension support, add name mangling to vfs, doc

--- a/examples/lua_microshell/config
+++ b/examples/lua_microshell/config
@@ -20,6 +20,7 @@
   # FS drivers
   CONFIG_VFS
   CONFIG_VFS_VERBOSE
+  CONFIG_VFS_NAMELEN 260
   CONFIG_DRIVER_FS_RAMFS
   CONFIG_DRIVER_FS_ISO9660
   
