--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -131,6 +131,11 @@ desc Provide read/write locks based on hexo scheduler
 ######################################################################
 #		Memory allocator
 
+%config CONFIG_MUTEK_MEM_REGION
+desc Enable use of memory region handler.
+default undefined
+%config end
+
 %config CONFIG_MUTEK_MEMALLOC_SIMPLE
 desc Enable use of simple memory allocation algorithm.
 desc Incremental memory allocation without freeing.
