added new libcrypto module

--- a/drivers/device/char/random/random.config
+++ b/drivers/device/char/random/random.config
@@ -1,6 +1,8 @@
 
 %config CONFIG_DRIVER_CHAR_RANDOM
-desc enable Arc4 based random stream generator pseudo device
+depend CONFIG_LIBCRYPTO
+provide CONFIG_LIBCRYPTO_ARC4
+desc enable random stream generator pseudo device
 default undefined
 %config end
 
