Darwin native emulation support, ia32 for now

--- a/arch/emu/Makefile
+++ b/arch/emu/Makefile
@@ -4,6 +4,10 @@ arch_init.o										\
 mem_init.o \
 hw_init.o
 
+ifeq ($(CONFIG_ARCH_EMU_DARWIN),defined)
+objs += darwin_before.o darwin_after.o
+endif
+
 subdirs = include/arch/hexo
 
 copy = ldscript
