--- a/libcrypto/crypto.config
+++ b/libcrypto/crypto.config
@@ -1,5 +1,5 @@
 
-%module Cryptographic algorithms library
+%module Cryptographic algorithms
 
 %config CONFIG_LIBCRYPTO
 desc Enable use of cryptographic algorithms in MutekH
