--- a/libvfs/vfs.config
+++ b/libvfs/vfs.config
@@ -1,26 +1,19 @@
 
+%module Virtual File System
+
 %config CONFIG_VFS
-desc Enables VFS support
+desc Enable virtual file system support
 provide CONFIG_MODULES=+libvfs:$(CONFIGPATH)
+require CONFIG_VFS_NAMELEN
 %config end
 
-%config CONFIG_VFS_DEBUG
+%config CONFIG_VFS_NAMELEN
 parent CONFIG_VFS
-desc Enables VFS debugging
+default 32
+desc Maximum file name length stored in vfs node. Longer on disk file names will be seen mangled.
 %config end
 
-%config CONFIG_VFS_LIBC_STREAM
-desc Enable support for vfs
+%config CONFIG_VFS_VERBOSE
 parent CONFIG_VFS
-depend CONFIG_VFS
-%config end
-
-%config CONFIG_BC_DEBUG
-parent CONFIG_VFS
-desc Enables BufferCache debugging
-%config end
-
-%config CONFIG_BC_INSTRUMENT
-parent CONFIG_VFS
-desc Enables BufferCache instrumentation
+desc Print some vfs debugging informations
 %config end
