experimental smp support for emu

--- a/arch/emu/emu.config
+++ b/arch/emu/emu.config
@@ -7,10 +7,11 @@ provide	CONFIG_ARCH_NAME=emu
 provide CONFIG_MODULES=+arch:$(CONFIGPATH)
 provide	CONFIG_ARCH_HW_INIT
 require CONFIG_ARCH_EMU_MEMORY
+require CONFIG_ARCH_EMU_PAGESIZE
 require CONFIG_CPU_X86_EMU CONFIG_CPU_X86_64_EMU
 require CONFIG_ARCH_EMU_LINUX CONFIG_ARCH_EMU_DARWIN
 single  CONFIG_ARCH_EMU_LINUX CONFIG_ARCH_EMU_DARWIN
-exclude CONFIG_SMP CONFIG_CLUSTER
+exclude CONFIG_CLUSTER
 %config end
 
 %config CONFIG_ARCH_EMU_MEMORY
@@ -26,5 +27,10 @@ parent CONFIG_ARCH_EMU
 
 %config CONFIG_ARCH_EMU_LINUX
 desc Target system is Linux
+parent CONFIG_ARCH_EMU
+%config end
+
+%config CONFIG_ARCH_EMU_PAGESIZE
+desc Host architecture mmap page size
 parent CONFIG_ARCH_EMU
 %config end
