--- a/examples/common/platforms-emu.conf
+++ b/examples/common/platforms-emu.conf
@@ -27,6 +27,9 @@
 
   CONFIG_ARCH_EMU
 
+#  CONFIG_SMP
+#  CONFIG_CPU_MAXCOUNT 4
+
   CONFIG_ARCH_HW_INIT
   CONFIG_DRIVER_CHAR_EMUTTY
   CONFIG_CPU_RESET_HANDLER undefined
