--- a/cpu/x86-emu/emu.config
+++ b/cpu/x86-emu/emu.config
@@ -12,5 +12,6 @@ provide CONFIG_CPU_CACHE CONFIG_CPU_CACHE_COHERENCY
 provide CONFIG_CPU_ENDIAN_LITTLE
 provide CONFIG_COMPILE_SIZEOF_INT=4
 provide CONFIG_CPU_NONALIGNED_ACCESS
+provide CONFIG_ARCH_EMU_PAGESIZE=4096
 %config end
 
