--- a/libvfs/vfs.config
+++ b/libvfs/vfs.config
@@ -17,3 +17,8 @@ desc Maximum file name length stored in vfs node. Longer on disk file names will
 parent CONFIG_VFS
 desc Print some vfs debugging informations
 %config end
+
+%config CONFIG_VFS_STATS
+parent CONFIG_VFS
+desc Gather statistics about VFS operations
+%config end
