Option for bypassing the buffer cache when file reading (in-place loading)

--- a/drivers/fs/vfat/vfat.config
+++ b/drivers/fs/vfat/vfat.config
@@ -14,3 +14,9 @@ desc Enables VFAT debugging
 parent CONFIG_DRIVER_FS_VFAT
 desc Enables VFAT instrumentation
 %config end
+
+%config CONFIG_DRIVER_FS_VFAT_READBYPASSBC
+desc Bypass the 'write-back full associative Buffer-Cache' for vfs_read_file operation
+default undefined
+parent CONFIG_DRIVER_FS_VFAT
+%config end
