The big VFS update, hacky things, WiP

--- a/examples/lua_microshell/config
+++ b/examples/lua_microshell/config
@@ -19,7 +19,9 @@ CONFIG_LIBLUA
 # FS drivers
 CONFIG_VFS
 CONFIG_VFS_STATS
+#CONFIG_VFS_VERBOSE
 CONFIG_DRIVER_FS_RAMFS
+CONFIG_DRIVER_FS_ISO9660
 
 # Libc
 CONFIG_LIBC_STREAM
