--- a/libvfs/Makefile
+++ b/libvfs/Makefile
@@ -2,7 +2,9 @@ objs = \
 	vfs.o \
 	helpers.o \
 	globals.o \
-	file.o
+	file.o \
+	node.o \
+	fs.o
 
 doc_headers = vfs/file.h vfs/fs.h vfs/globals.h vfs/helpers.h vfs/ops.h vfs/types.h vfs/vfs.h
 
