Add an hexdump command, fat16 test

--- a/examples/lua_microshell/config
+++ b/examples/lua_microshell/config
@@ -22,6 +22,8 @@ CONFIG_VFS_STATS
 #CONFIG_VFS_VERBOSE
 CONFIG_DRIVER_FS_RAMFS
 CONFIG_DRIVER_FS_ISO9660
+CONFIG_DRIVER_FS_FAT16
+CONFIG_DRIVER_FS_FAT_LFN
 
 # Libc
 CONFIG_LIBC_STREAM
