FAT32 support, lower 8.3 names through ntres, various fixes

--- a/drivers/fs/fat/fat.config
+++ b/drivers/fs/fat/fat.config
@@ -7,6 +7,14 @@ default undefined
 provide CONFIG_DRIVER_FS_FAT
 %config end
 
+%config CONFIG_DRIVER_FS_FAT32
+parent CONFIG_VFS
+depend CONFIG_VFS
+desc FAT32 support
+default undefined
+provide CONFIG_DRIVER_FS_FAT
+%config end
+
 %config CONFIG_DRIVER_FS_FAT
 parent CONFIG_VFS
 depend CONFIG_VFS
@@ -19,6 +27,16 @@ flags nodefine
 parent CONFIG_VFS
 depend CONFIG_VFS
 desc FAT Long File Names support
+default defined
+parent CONFIG_DRIVER_FS_FAT
+depend CONFIG_DRIVER_FS_FAT
+%config end
+
+%config CONFIG_DRIVER_FS_FAT_TYPE_FROM_STRING
+parent CONFIG_VFS
+depend CONFIG_VFS
+desc Determine FAT type from string in header,
+desc not from data cluster count (as defined in spec)
 default defined
 parent CONFIG_DRIVER_FS_FAT
 depend CONFIG_DRIVER_FS_FAT
