--- a/drivers/fs/fat/Makefile
+++ b/drivers/fs/fat/Makefile
@@ -1,7 +1,11 @@
-objs += fat-dirent.o fat-file.o fat-sector-cache.o
+objs += fat-dirent.o fat-file.o fat-sector-cache.o fat.o
 
 ifeq ($(CONFIG_DRIVER_FS_FAT16), defined)
 objs += fat16.o
+endif
+
+ifeq ($(CONFIG_DRIVER_FS_FAT32), defined)
+objs += fat32.o
 endif
 
 ifeq ($(CONFIG_DRIVER_FS_FAT_LFN), defined)
