added md5 hash algorithm

--- a/libcrypto/crypto.config
+++ b/libcrypto/crypto.config
@@ -12,6 +12,11 @@ parent CONFIG_LIBCRYPTO
 desc Enable compilation of Arc4 pseudo random stream generator
 %config end
 
+%config CONFIG_LIBCRYPTO_MD5
+parent CONFIG_LIBCRYPTO
+desc Enable compilation of MD5 cryptographic hash algorithm
+%config end
+
 %config CONFIG_LIBCRYPTO_CRC32
 parent CONFIG_LIBCRYPTO
 desc Enable compilation of 32 bits Cyclic redundancy check
