added cache block device

--- a/drivers/device/block/Makefile
+++ b/drivers/device/block/Makefile
@@ -13,6 +13,10 @@ ifeq ($(CONFIG_DRIVER_BLOCK_PARTITION), defined)
  subdirs += partition
 endif
 
+ifeq ($(CONFIG_DRIVER_BLOCK_CACHE), defined)
+ subdirs += cache
+endif
+
 ifeq ($(CONFIG_DRIVER_BLOCK_SOCLIB), defined)
  subdirs += soclib
 endif
