Add device file system, update shell example

--- a/examples/lua_microshell/Makefile
+++ b/examples/lua_microshell/Makefile
@@ -1,5 +1,9 @@
 
-objs = getline_lua.o shell_functions.o
+objs = getline_lua.o
+
+ifeq ($(CONFIG_VFS),defined)
+objs += vfs_functions.o
+endif
 
 ifeq ($(CONFIG_LIBELF_RTLD),defined)
 objs += rtld_functions.o
@@ -8,3 +12,23 @@ endif
 ifeq ($(CONFIG_LIBDSRL),defined)
 objs += dsrl_functions.o
 endif
+
+ifeq ($(CONFIG_LIBDSRL),defined)
+objs += dsrl_functions.o
+endif
+
+ifeq ($(CONFIG_LIBCRYPTO_MD5),defined)
+objs += crypto_functions.o
+endif
+
+ifeq ($(CONFIG_ARCH_SIMPLE_OLIMEX_SAM7_EX256),defined)
+ifeq ($(CONFIG_DRIVER_LCD),defined)
+objs += lcd.o
+endif
+endif
+
+ifeq ($(CONFIG_MUTEK_TIMERMS),defined)
+objs += timer.o
+endif
+
+DIR_CFLAGS=-O0 -ggdb
