--- a/examples/lua_microshell/config
+++ b/examples/lua_microshell/config
@@ -32,7 +32,6 @@ CONFIG_DRIVER_FS_ISO9660
 CONFIG_LIBC_STREAM
 CONFIG_LIBC_ASSERT
 #  CONFIG_VFS_LIBC_STREAM
-CONFIG_LIBCRYPTO_MD5
 
 # New source code module to be compiled
 CONFIG_MODULES app:$(CONFIGPATH)
@@ -54,3 +53,12 @@ CONFIG_LIBELF_RTLD
 %section dsrl
 
 CONFIG_LIBDSRL
+
+%section crypto
+
+CONFIG_LIBCRYPTO_MD5
+
+%section devfs
+
+CONFIG_DRIVER_FS_DEVFS
+
