--- a/drivers/fs/Makefile
+++ b/drivers/fs/Makefile
@@ -9,3 +9,7 @@ endif
 ifeq ($(CONFIG_DRIVER_FS_ISO9660), defined)
  subdirs += iso9660
 endif
+
+ifeq ($(CONFIG_DRIVER_FS_DEVFS), defined)
+ subdirs += devfs
+endif
