Add more documentation

--- a/libvfs/Makefile
+++ b/libvfs/Makefile
@@ -6,9 +6,8 @@ objs = \
 	node.o \
 	fs.o
 
-doc_headers = vfs/file.h vfs/fs.h vfs/globals.h vfs/helpers.h vfs/ops.h vfs/types.h vfs/vfs.h
+doc_headers = vfs/file.h vfs/fs.h vfs/globals.h vfs/helpers.h	\
+vfs/defs.h vfs/ops.h vfs/types.h vfs/vfs.h
 
-#DIR_CFLAGS=-Werror
-
-#helpers.o_CFLAGS=-O0 -ggdb
+#DIR_CFLAGS=-O0 -ggdb
 #vfs.o_CFLAGS=-O0 -ggdb
