Preliminary Thumb support

--- a/cpu/arm/Makefile
+++ b/cpu/arm/Makefile
@@ -15,4 +15,10 @@ copy = ldscript
 
 subdirs = libc
 
-
+ifeq ($(CONFIG_CPU_ARM_THUMB), defined)
+objs += thumb_helpers.o
+interrupt.o_CFLAGS = -mno-thumb
+cpu_init.o_CFLAGS = -mno-thumb
+boot_m.o_CFLAGS = -mno-thumb
+boot.o_CFLAGS = -mno-thumb
+endif
