--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -69,6 +69,12 @@ exclude CONFIG_SMP
 provide CONFIG_DATA_FROM_ROM
 %config end
 
+%config CONFIG_CPU_ARM_THUMB
+desc ARM Thumb code support
+parent CONFIG_CPU_ARM
+require CONFIG_CPU_ARM
+%config end
+
 %config CONFIG_CPU_ARM_7TDMI
 desc Arm7-TDMI
 parent CONFIG_CPU_ARM
