Add simple platforms to common configuration directory

--- a/examples/common/build_options.conf
+++ b/examples/common/build_options.conf
@@ -25,5 +25,8 @@
 %section noopt
   CONFIG_COMPILE_OPTIMIZE 0
 
+%section savetemps
+  CONFIG_COMPILE_SAVETEMPS
+
 %section verbose_vfs
   CONFIG_VFS_VERBOSE
