--- a/examples/common/platforms.conf
+++ b/examples/common/platforms.conf
@@ -1,4 +1,5 @@
 %include ./platforms-emu.conf
+%include ./platforms-simple.conf
 %include ./platforms-ibmpc.conf
 %include ./platforms-soclib.conf
 
