--- a/examples/lua_microshell/config
+++ b/examples/lua_microshell/config
@@ -17,17 +17,6 @@ CONFIG_MUTEK_SCHEDULER_STATIC
 CONFIG_LIBTERMUI
 CONFIG_LIBLUA
 
-# FS drivers
-CONFIG_VFS
-CONFIG_VFS_STATS
-CONFIG_VFS_GLOBAL_ROOT
-CONFIG_VFS_GLOBAL_CWD
-#CONFIG_VFS_VERBOSE
-CONFIG_DRIVER_FS_RAMFS
-CONFIG_DRIVER_FS_ISO9660
-#CONFIG_DRIVER_FS_FAT
-#CONFIG_DRIVER_FS_FAT16
-
 # Libc
 CONFIG_LIBC_STREAM
 CONFIG_LIBC_ASSERT
@@ -66,3 +55,37 @@ CONFIG_DRIVER_FS_DEVFS
 
 CONFIG_MUTEK_TIMERMS
 
+%section vfs
+
+# FS drivers
+CONFIG_VFS
+CONFIG_VFS_GLOBAL_ROOT
+CONFIG_VFS_GLOBAL_CWD
+
+%section vfs-stats
+
+#CONFIG_VFS_STATS
+
+%section vfs-verbose
+
+#CONFIG_VFS_VERBOSE
+
+%section ramfs
+
+CONFIG_DRIVER_FS_RAMFS
+
+%section iso9660
+
+CONFIG_DRIVER_FS_ISO9660
+
+%section fat-*
+
+CONFIG_DRIVER_FS_FAT
+
+%section fat-16
+
+CONFIG_DRIVER_FS_FAT16
+
+%section fat-32
+
+CONFIG_DRIVER_FS_FAT32
