added CONFIG_HEXO_IRQ and made irq support optional

--- a/drivers/device/icu/ppc/icu-ppc.config
+++ b/drivers/device/icu/ppc/icu-ppc.config
@@ -4,5 +4,6 @@ desc enable PowerPC interrupt controller unit support
 default defined
 parent CONFIG_CPU_PPC
 provide CONFIG_DRIVER_ICU
+depend CONFIG_HEXO_IRQ
 %config end
 
