--- a/examples/hello_het/config
+++ b/examples/hello_het/config
@@ -22,10 +22,11 @@
   CONFIG_FDT
   CONFIG_DRIVER_ENUM_FDT
 
+  CONFIG_HEXO_IRQ undefined
   CONFIG_DRIVER_CHAR_SOCLIBTTY
   # CONFIG_DRIVER_ICU_SOCLIB
   # CONFIG_DRIVER_TIMER_SOCLIB
-  CONFIG_DRIVER_ICU_SOCLIB_XICU
+  # CONFIG_DRIVER_ICU_SOCLIB_XICU
 
 # Libs
   CONFIG_PTHREAD
@@ -53,7 +54,7 @@
   CONFIG_CPU_ARM
   CONFIG_CPU_ARM_SOCLIB
 
-  CONFIG_DRIVER_ICU_ARM defined
+  CONFIG_DRIVER_ICU_ARM undefined
   CONFIG_ROM_ADDR 0x61200000
 
 %section mipsel
@@ -63,6 +64,6 @@
   CONFIG_CPU_MIPS_VERSION 32
   CONFIG_CPU_ENDIAN_LITTLE
 
-  CONFIG_DRIVER_ICU_MIPS defined
+  CONFIG_DRIVER_ICU_MIPS undefined
   CONFIG_ROM_ADDR 0x61100000
 
