--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -1,6 +1,11 @@
 
 %module Hexo
 
+%config CONFIG_HEXO_IRQ
+desc Hardware interrupts support
+default defined
+%config end
+
 %config CONFIG_HEXO_IPI
 desc Inter processor interrupts support
 depend CONFIG_SMP
