--- a/drivers/device/icu/arm/icu-arm.config
+++ b/drivers/device/icu/arm/icu-arm.config
@@ -4,5 +4,6 @@ desc enable ARM interrupt controller unit support
 default defined
 parent CONFIG_CPU_ARM
 provide CONFIG_DRIVER_ICU
+depend CONFIG_HEXO_IRQ
 %config end
 
