hello_het update

--- a/examples/hello_het/config
+++ b/examples/hello_het/config
@@ -5,11 +5,16 @@
 # Application license
   CONFIG_LICENSE_APP_LGPL
 
-# Compiler options
+# Build
   CONFIG_COMPILE_DEBUG
+  CONFIG_COMPILE_OPTIMIZE 2
+  CONFIG_HET_BUILD
+  CONFIG_MUTEK_SMP_APP_START
 
 # Platform types
   CONFIG_ARCH_SOCLIB
+  CONFIG_SMP
+  CONFIG_CPU_MAXCOUNT 4
 
 # Mutek features
   CONFIG_MUTEK_CONSOLE
@@ -22,10 +27,9 @@
   CONFIG_FDT
   CONFIG_DRIVER_ENUM_FDT
 
-  CONFIG_HEXO_IRQ undefined
+#  CONFIG_PTHREAD_MUTEX_ATTR undefined
   CONFIG_DRIVER_CHAR_SOCLIBTTY
-  # CONFIG_DRIVER_ICU_SOCLIB
-  # CONFIG_DRIVER_TIMER_SOCLIB
+  CONFIG_HEXO_IRQ undefined
   # CONFIG_DRIVER_ICU_SOCLIB_XICU
 
 # Libs
@@ -34,19 +38,15 @@
 # Memory layout
   CONFIG_HETROM_ADDR 0x60100000
   CONFIG_HETROM_SIZE 0x00100000
-  
+
   CONFIG_ROM_SIZE 0x00100000
-  
+
   CONFIG_RAM_ADDR 0x71600000
   CONFIG_RAM_SIZE 0x00100000
-  
+
   CONFIG_CPU_RESET_HANDLER
 
   CONFIG_SOCLIB_EARLY_CONSOLE 0x90600000
-  CONFIG_HET_BUILD
-
-  CONFIG_SMP
-  CONFIG_CPU_MAXCOUNT 4
 
 %section arm
 
