--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -50,6 +50,11 @@ desc libc printf support %S and %P extentions to dump buffers
 default defined
 %config end
 
+%config CONFIG_MUTEK_SMP_APP_START
+desc let all processors enter app_start function
+default undefined
+%config end
+
 ######################################################################
 #		Vmem
 
