Make FAT r/w support optional

--- a/drivers/fs/fat/fat.config
+++ b/drivers/fs/fat/fat.config
@@ -25,6 +25,12 @@ default defined
 parent CONFIG_DRIVER_FS_FAT
 %config end
 
+%config CONFIG_DRIVER_FS_FAT_RW
+desc FAT read/write support
+default defined
+parent CONFIG_DRIVER_FS_FAT
+%config end
+
 %config CONFIG_DRIVER_FS_FAT_TYPE_FROM_STRING
 desc Determine FAT type from string in header,
 desc not from data cluster count (as defined in spec)
