Make LCD optional

--- a/examples/sam7_ex256_demo/Makefile
+++ b/examples/sam7_ex256_demo/Makefile
@@ -1,5 +1,9 @@
 
-objs = main.o lcd.o bitmap.o block.o joystick.o i2c.o
+objs = main.o bitmap.o block.o joystick.o i2c.o
+
+ifeq ($(CONFIG_DRIVER_LCD),defined)
+objs += lcd.o
+endif
 
 ifeq ($(CONFIG_MUTEK_TIMERMS),defined)
 objs += timer.o
