Move fdt consumer to Mutek common utilities

--- a/mutek/Makefile
+++ b/mutek/Makefile
@@ -1,7 +1,7 @@
 
 doc_headers = mutek/mem_alloc.h mutek/page_alloc.h mutek/printf_arg.h	\
 	mutek/printk.h mutek/rwlock.h mutek/scheduler.h mutek/timer.h	\
-	mutek/vmem_kalloc.h mutek/semaphore.h
+	mutek/vmem_kalloc.h mutek/semaphore.h mutek/fdt.h
 
 objs = timer.o
 objs += printf_arg.o
@@ -50,4 +50,6 @@ ifeq ($(CONFIG_MUTEK_RWLOCK), defined)
 objs += rwlock.o
 endif
 
-
+ifeq ($(CONFIG_ARCH_DEVICE_TREE), defined)
+ objs += fdt_consumer.o
+endif
