CONFIG_COMPILE_SOFTFLOAT default

--- a/scripts/global.config
+++ b/scripts/global.config
@@ -17,7 +17,7 @@ default defined
 
 %config CONFIG_COMPILE_SOFTFLOAT
 desc Use software only floating point
-default undefined
+default defined
 %config end
 
 %config CONFIG_COMPILE_COLLECT
