--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -35,12 +35,12 @@ desc Virtual memory physical page size
 %config end
 
 %config CONFIG_HEXO_MMU_PADDR
-desc Physical address size uses by MMU
+desc Physical address size used by MMU
 default undefined
 %config end
 
 %config CONFIG_HEXO_MMU_VADDR
-desc Virtual address sire uses by MMU
+desc Virtual address size used by MMU
 default undefined
 %config end
 
