Rework exception handlers: * switch back to kernel context unconditionnaly; * uniformize exception handler arguments; * factor-out some common asm constraints

--- a/cpu/arm/Makefile
+++ b/cpu/arm/Makefile
@@ -4,11 +4,7 @@ cpu_init.o										\
 cpu_context.o
 
 ifeq ($(CONFIG_CPU_RESET_HANDLER),defined)
-ifeq ($(CONFIG_CPU_ARM_M_PROFILE),defined)
-objs += boot_m.o
-else
-objs += boot.o
-endif
+objs += boot.o exception.o
 endif
 
 copy = ldscript
@@ -17,7 +13,7 @@ subdirs = libc
 
 ifeq ($(CONFIG_CPU_ARM_THUMB), defined)
 objs += thumb_helpers.o
-interrupt.o_CFLAGS = -mno-thumb
+exception.o_CFLAGS = -mno-thumb
 cpu_init.o_CFLAGS = -mno-thumb
 boot_m.o_CFLAGS = -mno-thumb
 boot.o_CFLAGS = -mno-thumb
