--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -83,3 +83,8 @@ provide CONFIG_CPU_ARM_M_PROFILE
 # provide CONFIG_CPU_ARM_T_PROFILE
 provide CONFIG_CPU_ARM_FPU=soft
 %config end
+
+%config CONFIG_CPU_ARM_CUSTOM_IRQ_HANDLER
+desc Has custom ICU-based IRQ handler, often seen in microcontrollers
+parent CONFIG_CPU_ARM
+%config end
