--- a/drivers/device/icu/sam7/icu-sam7.config
+++ b/drivers/device/icu/sam7/icu-sam7.config
@@ -4,5 +4,6 @@ desc Enable SAM7 AIC support
 default undefined
 depend CONFIG_ARCH_SIMPLE_SAM7
 provide CONFIG_DRIVER_ICU
+provide CONFIG_CPU_ARM_CUSTOM_IRQ_HANDLER
 %config end
 
