improved configuration script, examples config files and merged het config, see examples/README

--- a/examples/common/platforms-emu.conf
+++ b/examples/common/platforms-emu.conf
@@ -2,27 +2,27 @@
 # EMU
 
 %section emu-linux-*
-  %types hostos
+  %types host_os
 
   CONFIG_ARCH_EMU_LINUX
 
 %section emu-darwin-*
-  %types hostos
+  %types host_os
 
   CONFIG_ARCH_EMU_DARWIN
 
 %section emu-*-x86_64
-  %types cpu
+  %types emu_cpu
 
   CONFIG_CPU_X86_64_EMU
 
 %section emu-*-x86
-  %types cpu
+  %types emu_cpu
 
   CONFIG_CPU_X86_EMU
 
 %section emu-*-*
-  %requiretypes hostos
+  %requiretypes host_os emu_cpu
   %types architecture
 
   CONFIG_ARCH_EMU
