--- a/examples/common/platforms-simple.conf
+++ b/examples/common/platforms-simple.conf
@@ -1,6 +1,6 @@
 
 %section sam7ex256
-  %types platform
+  %types simple_platform
 
   CONFIG_ARCH_SIMPLE_SAM7X256
 
@@ -16,9 +16,14 @@
   CONFIG_DRIVER_SPI_SPI6088D
 #  CONFIG_DRIVER_I2C_TWI6061A
 
+%section simple-arm
+  %types simple_cpu
+  CONFIG_CPU_ARM
+#  CONFIG_CPU_ARM_THUMB
+
 %section simple-*
   %types architecture arch_simple
-  %requiretypes platform
+  %requiretypes simple_platform simple_cpu
 
   # Platform types
   CONFIG_ARCH_SIMPLE
@@ -27,20 +32,12 @@
 
   CONFIG_COMPILE_OPTIMIZE s
 
-%section simple-arm
-  %types cpu
-
-  CONFIG_CPU_ARM
-#  CONFIG_CPU_ARM_THUMB
-
 %section jtag
-
-CONFIG_DRIVER_CHAR_SAM7DBGU
+  CONFIG_DRIVER_CHAR_SAM7DBGU
 
 %section lcd-pcf8833
-
-provide CONFIG_DRIVER_LCD_PCF8833
+  provide CONFIG_DRIVER_LCD_PCF8833
 
 %section lcd-s1d1g00
+  provide CONFIG_DRIVER_LCD_S1D15G00
 
-provide CONFIG_DRIVER_LCD_S1D15G00
