--- a/examples/common/platforms-soclib.conf
+++ b/examples/common/platforms-soclib.conf
@@ -1,48 +1,27 @@
 
+#################################################
 # First we define platforms
 
-%section pf_kernel_tutorial
-  %types platform
 
-  # Memory layout
-  CONFIG_ROM_ADDR 0x60000000
-  CONFIG_ROM_SIZE 0x00100000
-  
-  CONFIG_RAM_ADDR 0x7f000000
-  CONFIG_RAM_SIZE 0x01000000
+# Default SoCLib platform
 
-  CONFIG_HETROM_ADDR 0x80000000
-  CONFIG_HETROM_SIZE 0x01000000
+%section pf_soclib_tutorial pf_kernel_tutorial
+  %die $(CONFIGSECTION) has been renamed, please use to pf-tutorial instead
 
-  CONFIG_MODULES +pf_def:$(CONFIGPATH)
-  %set platform_name pf_kernel_tutorial
+%section pf-tutorial
+  %types soclib_platform
 
-%section pf_soclib_tutorial
-  %types platform
-  
+  %notice Targetting mutekh_soclib_tutorial and mutekh_kernel_tutorial SoCLib platforms
+
   # Memory layout
   CONFIG_RAM_ADDR 0x7f000000
   CONFIG_RAM_SIZE 0x01000000
-
   CONFIG_ROM_ADDR 0x60000000
   CONFIG_ROM_SIZE 0x00100000
 
   CONFIG_SOCLIB_EARLY_CONSOLE 0xd0200000
   CONFIG_MODULES +pf_def:$(CONFIGPATH)
   %set platform_name pf_soclib_tutorial
-
-# Then the soclib generic part
-
-%section soclib-*
-  %types architecture arch_soclib
-  %requiretypes platform
-
-  # Platform types
-  CONFIG_ARCH_SOCLIB
-  CONFIG_SMP
-  CONFIG_CPU_MAXCOUNT 4
-  
-  CONFIG_CPU_RESET_HANDLER
 
   # Device and drivers
   CONFIG_DRIVER_CHAR_SOCLIBTTY
@@ -51,26 +30,87 @@
   CONFIG_DRIVER_BLOCK_SOCLIB
   CONFIG_DRIVER_TIMER_SOCLIB
 
-  CONFIG_ARCH_DEVICE_TREE
-  CONFIG_FDT
-  CONFIG_DRIVER_ENUM_FDT
 
-# And finally CPUs
+# Heterogeneous SoCLib platform
+
+%section pf-het
+  %types soclib_platform
+
+  %notice Targetting mutekh_kernel_tutorial SoCLib platforms with processor heterogeneity
+
+  CONFIG_HET_BUILD
+
+  # Memory layout
+  CONFIG_HEXO_IRQ undefined
+  CONFIG_RAM_ADDR 0x7f000000
+  CONFIG_RAM_SIZE 0x01000000
+  CONFIG_ROM_SIZE 0x00100000
+  CONFIG_HETROM_ADDR 0x60000000
+  CONFIG_HETROM_SIZE 0x00100000
+
+  CONFIG_MUTEK_SMP_APP_START
+  CONFIG_SOCLIB_EARLY_CONSOLE 0xd0200000
+  # Device and drivers
+  CONFIG_DRIVER_CHAR_SOCLIBTTY
+
+  %set platform_name kernel_tutorial
+
+  %subsection soclib-arm
+    %types supported_het_cpu
+    CONFIG_ROM_ADDR 0x80100000
+    CONFIG_DRIVER_ICU_ARM undefined
+  %end
+
+  %subsection soclib-mips32el
+    %types supported_het_cpu
+    CONFIG_ROM_ADDR 0x80000000
+    CONFIG_DRIVER_ICU_MIPS undefined
+  %end
+
+  %requiretypes supported_het_cpu
+
+#################################################
+# CPUs
 
 %section soclib-mipsel soclib-mips
-  %types cpu
+  %warning $(CONFIGSECTION) build name is deprecated, use soclib-mips32el instead
+
+%section soclib-mips32el soclib-mipsel soclib-mips
+  %types soclib_cpu
 
   CONFIG_CPU_MIPS
   CONFIG_CPU_MIPS_VERSION 32
   CONFIG_CPU_ENDIAN_LITTLE
 
 %section soclib-arm
-  %types cpu
+  %types soclib_cpu
 
   CONFIG_CPU_ARM
   CONFIG_CPU_ARM_SOCLIB
 
+%section soclib-powerpc
+  %warning $(CONFIGSECTION) build name is deprecated, use soclib-ppc instead
+
 %section soclib-ppc soclib-powerpc
-  %types cpu
+  %types soclib_cpu
 
   CONFIG_CPU_PPC
+
+#################################################
+# Then the soclib generic part
+
+%section soclib-*
+  %types architecture
+  %requiretypes soclib_platform soclib_cpu
+
+  # Platform types
+  CONFIG_ARCH_SOCLIB
+  CONFIG_SMP
+  CONFIG_CPU_MAXCOUNT 4
+  
+  CONFIG_CPU_RESET_HANDLER
+
+  CONFIG_ARCH_DEVICE_TREE
+  CONFIG_FDT
+  CONFIG_DRIVER_ENUM_FDT
+
