--- a/examples/common/platforms.conf
+++ b/examples/common/platforms.conf
@@ -3,11 +3,9 @@
 %include ./platforms-ibmpc.conf
 %include ./platforms-soclib.conf
 
-%section het
-  %requiretypes arch_soclib
-
-  CONFIG_HET_BUILD
-
 %common
-  %requiretypes architecture cpu
+  %requiretypes architecture
+
+%section default
+  %error Missing build configuration section names, please specify BUILD=xxx
 
