--- a/examples/hello_het/config
+++ b/examples/hello_het/config
@@ -1,69 +1,18 @@
 
 # New source code module to be compiled
-  CONFIG_MODULES examples/hello:$(CONFIGPATH)
+  CONFIG_MODULES +hello_het:$(CONFIGPATH)
 
 # Application license
   CONFIG_LICENSE_APP_LGPL
 
-# Build
-  CONFIG_COMPILE_DEBUG
-  CONFIG_COMPILE_OPTIMIZE 2
-  CONFIG_HET_BUILD
-  CONFIG_MUTEK_SMP_APP_START
-
-# Platform types
-  CONFIG_ARCH_SOCLIB
-  CONFIG_SMP
-  CONFIG_CPU_MAXCOUNT 4
-
 # Mutek features
   CONFIG_MUTEK_CONSOLE
   CONFIG_MUTEK_SCHEDULER_MIGRATION
-#  CONFIG_MUTEK_SCHEDULER_STATIC
   CONFIG_MUTEK_MEMALLOC_SMART
-
-# Device and drivers
-  CONFIG_ARCH_DEVICE_TREE
-  CONFIG_FDT
-  CONFIG_DRIVER_ENUM_FDT
-
-#  CONFIG_PTHREAD_MUTEX_ATTR undefined
-  CONFIG_DRIVER_CHAR_SOCLIBTTY
-  CONFIG_HEXO_IRQ undefined
-  # CONFIG_DRIVER_ICU_SOCLIB_XICU
 
 # Libs
   CONFIG_PTHREAD
 
-# Memory layout
-  CONFIG_HETROM_ADDR 0x60100000
-  CONFIG_HETROM_SIZE 0x00100000
-
-  CONFIG_ROM_SIZE 0x00100000
-
-  CONFIG_RAM_ADDR 0x71600000
-  CONFIG_RAM_SIZE 0x00100000
-
-  CONFIG_CPU_RESET_HANDLER
-
-  CONFIG_SOCLIB_EARLY_CONSOLE 0x90600000
-
-%section arm
-
-# Processor types, ARM
-  CONFIG_CPU_ARM
-  CONFIG_CPU_ARM_SOCLIB
-
-  CONFIG_DRIVER_ICU_ARM undefined
-  CONFIG_ROM_ADDR 0x61200000
-
-%section mipsel
-
-# Processor types, Mips little endian with multiprocessor support up to 4 cpus
-  CONFIG_CPU_MIPS
-  CONFIG_CPU_MIPS_VERSION 32
-  CONFIG_CPU_ENDIAN_LITTLE
-
-  CONFIG_DRIVER_ICU_MIPS undefined
-  CONFIG_ROM_ADDR 0x61100000
+%include ../common/build_options.conf
+%include ../common/platforms.conf
 
