Add drivers for ICUs

--- a/examples/common/platforms-soclib.conf
+++ b/examples/common/platforms-soclib.conf
@@ -81,12 +81,15 @@
   CONFIG_CPU_MIPS
   CONFIG_CPU_MIPS_VERSION 32
   CONFIG_CPU_ENDIAN_LITTLE
+  CONFIG_DRIVER_ICU_MIPS
+
 
 %section soclib-arm
   %types soclib_cpu
 
   CONFIG_CPU_ARM
   CONFIG_CPU_ARM_SOCLIB
+  CONFIG_DRIVER_ICU_ARM
 
 %section soclib-powerpc
   %warning $(CONFIGSECTION) build name is deprecated, use soclib-ppc instead
@@ -95,6 +98,7 @@
   %types soclib_cpu
 
   CONFIG_CPU_PPC
+  CONFIG_DRIVER_ICU_PPC
 
 #################################################
 # Then the soclib generic part
